tdf#102619 writerfilter: first create style, then set FollowStyle

Styles were having FollowStyle set to themselves (Heading 1),
not to a defined follow (Text body).

The style was being created with a FollowStyle property that
identified a style which had not yet been created.
So svl code was warning
  "svl.items", "StyleSheet-Follow not found"

This section of code should really be cleaned up, but that will
happen in a separate commit.

Change-Id: Iae79fac917f64cdaa14ca6568e7d903ec6dc60fa